# airflow-engineering-challenge

./: .gitignore  README.md  docker-compose.yml
api/: Dockerfile  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  seed_data.py
dags/: extract_products.py  load_stage.py  load_trusted.py  test_dag.py
docs/: Api Doc.md  Teste Técnico.md
init-scripts/: init-multiple-dbs.sql
local_storage/raw/: products_20250201_145654.json
